data/test-samples/logs/log-bundle-20230208181010-error-tls-timeout/rendered-assets/openshift/manifests/00_openshift-kube-scheduler-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: ""
    workload.openshift.io/allowed: "management"
  name: openshift-kube-scheduler
  labels:
    openshift.io/run-level: "0"
