data/test-samples/logs/log-bundle-20230208181010-error-tls-timeout/rendered-assets/openshift/manifests/cco-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: ""
  labels:
    controller-tools.k8s.io: "1.0"
    openshift.io/cluster-monitoring: "true"
  name: openshift-cloud-credential-operator
