data/test-samples/logs/log-bundle-20230208181010-error-tls-timeout/rendered-assets/openshift/manifests/cluster-ingress-02-config.yml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: cluster
spec:
  domain: apps.jufaerma0208.alicloud-dev.devcluster.openshift.com
  loadBalancer:
    platform:
      type: ""
status:
  defaultPlacement: Workers
